<resources>
    <string name="app_name"><node>&#x1F6B0;&#x1F4A7;</node>Wells<node>&#x1F4A7;&#x1F6B0;</node></string>
    <string name="app_name_short"><node>&#x1F4A7;</node>Wells<node>&#x1F4A7;</node></string>
    <!-- Fingerprint -->
    <string name="instructions"> </string>

    <!-- Strings related to login -->
    <string name="prompt_email">eMail</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register_in">Registrieren</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fingerprint">Fingerprint Log in</string>

    <!-- Navigation Drawer -->
    <string name="title_activity_main_menue"><node>&#x1F6B0;&#x1F4A7;</node>Wells<node>&#x1F4A7;&#x1F6B0;</node></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="homeButton">Home Button</string>

    <!-- nathalie strings -->

    <string name="textEmail">Email</string>
    <string name="textPassword">Passwort</string>
    <string name="textName">Name</string>
    <string name="textAge">Alter</string>
    <string name="textWeight">Gewicht</string>
    <string name="textSize">Größe</string>
    <string name="textRegister">Registrieren</string>

    <string name="textMl">ml</string>
    <string name="addWater">+ Wasser</string>
    <string name="simpleSwitch">Bewegung</string>
    <string name="title_activity_statistik">Statistik</string>
    <string name="haeckchen"><node>&#x2714;</node></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- hannah strings -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_Verlauf">Verlauf</string>
    <string name="title_Statistik">Statistik</string>
    <string name="title_Liste">Liste</string>
    <string name="title_Karte">Karte</string>
    <string name="title_Einstellungen">Einstellungen</string>
    <string name="title_notifications">Notificstion</string>
    <string name="title_activity_brunnenliste">brunnenliste</string>
    <string name="title_brunnenliste">Trinkbrunnen</string>

    <!-- marc stings -->

    <string name="einstellungen">Einstellungen</string>
    <string name="grundeinstellungen">Grundeinstellungen</string>
    <string name="Benachrichtigung">Benachrichtigungseinstellungen</string>
    <string name="löschen">Profil löschen</string>
    <string name="title_activity_einstellungen">Einstellungen</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_grund_einstellungen">GrundEinstellungen</string>
    <string name="title_activity_pwaendern">PWAendern</string>
    <string name="title_activity_benachrichtungungeinstellungen">benachrichtungungeinstellungen</string>
    <string name="title">Benachrichtigung</string>

    <string-array name="frequenz_array">
        <item>Stündlich</item>
        <item>Täglich</item>
        <item>Wöchentlich</item>
        <item>Monatlich</item>
        <item>Jährlich</item>
    </string-array>
    <string name="title_activity_karte">KarteActivity</string>
    <string name="eingabe_email">Eingabe eMail</string>
    <string name="eingabe_passwort">Eingabe Passwort</string>
    <string name="eingabe_name">Eingabe Name</string>
    <string name="in_jahren">in Jahren</string>
    <string name="in_kilogramm">in Kilogramm</string>
    <string name="in_zentimeter">in Zentimeter</string>
    <string name="passwort_ndern">Passwort ändern</string>
    <string name="altes_passwort">Altes Passwort</string>
    <string name="neues_passwort">Neues Passwort</string>
    <string name="passwort_best_tigen">Passwort bestätigen</string>
    <string name="speichern">Speichern</string>
    <string name="wenig">wenig</string>
    <string name="viel">viel</string>
    <string name="grundeinstellungen">Grundeinstellungen</string>
    <string name="gr_e">Größe</string>
    <string name="in_zentimeter">in Zentimeter</string>
    <string name="gewicht">Gewicht</string>
    <string name="in_kilogramm">in Kilogramm</string>
    <string name="alter">Alter</string>
    <string name="in_jahre">in Jahre</string>
    <string name="speichern">Speichern</string>
    <string name="benachrichtigungseistellungen">Benachrichtigungseistellungen</string>
    <string name="benachrichtigung_aktivieren">Benachrichtigung aktivieren</string>
    <string name="frequenz">Frequenz</string>
    <string name="speichern">Speichern</string>
    <string name="passwort_ndern">Passwort ändern</string>
    <string name="karte">Karte</string>
    <string name="liste">Liste</string>
    <string name="fingerprint_bild">Fingerprint Bild</string>
    <string name="noFingerprintFunktion">Ihr Handy kann kein Fingerprint!</string>
    <string name="fingerprintAktivPls">Bitte aktivieren Sie Login mittels Fingerprint!</string>
    <string name="fingerEinstSpeiPls">Bitte speichern Sie Ihren Finger in den Einstellungen!</string>
    <string name="displaysperreAktivPls">Aktivieren Sie eine Displaysperre!</string>

</resources>
