<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nathalieseibert.wells.Trinkbrunnen">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/title_brunnenliste"
        android:textColor="@color/schwoaz"
        android:textSize="25sp"

        />

    <Button
        android:id="@+id/buttonlist"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="550dp"
        android:enabled="false"
        android:text="@string/title_Liste" />

    <Button
        android:id="@+id/buttonkarte"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="215dp"
        android:layout_marginStart="215dp"
        android:layout_marginTop="550dp"
        android:text="@string/title_Karte" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp" />


</FrameLayout>
